# full_cost_2

./: .~lock.procedure_initiale.odt#  Dockerfile  Dockerfile.bak  LICENSE  MANIFEST.in  README.md  README.rst  docker-compose.yml  docker-compose.yml.bak  manage.py  procedure_initiale.odt  pyproject.toml
activity_base/: filters.py  tables.py  urls.py
activity_base/migrations/: 0001_initial.py
documentation/: conf.py  index.rst
documentation/_build/doctrees/: environment.pickle  index.doctree
documentation/_build/html/: .buildinfo  objects.inv
documentation/contents/activities/: chemistry.rst  engi.rst  imag.rst  ps2i.rst
full_cost/: settings.py  wsgi.py
full_cost/constants/: activities.py  entities.py  personnel.csv  populate_database_initial.py
full_cost/utils/: enum.py  facturing.py  file_management.py  filter_stuff.py  manage_time.py  url_stuff.py
lab/: admin.py  context_processors.py  forms.py  models.py  views.py
lab/migrations/: 0002_alter_historicalgroup_options_and_more.py
lab/templates/lab/: base.html  base_activity.html  experiments.html  footer.html  form_errors.html  index.html  navbar.html  record.html  subhtml.html
lab/templates/registration/: password_change_done.html
lab/templatetags/: tags_extras.py
src/fullcoster/: manage.py
src/fullcoster/app_base/: __init__.py  apps.toml  config_activities.toml  config_entities.toml  create_app.py  forms_options.py  manage_apps.py
src/fullcoster/constants/: activities.py  entities.py  populate_database_initial.py
src/fullcoster/full_cost/: asgi.py  settings.py  urls.py  wsgi.py
src/fullcoster/lab/: admin.py  apps.py  forms.py  (+6 more)
static/: project_pi.csv  template_facturation.xlsx
static/js/: chem_record.js  do_extraction.js  engi_record.js  met_record.js
(+105 files in other folders)
